remove some files

--- a/.upgrade.yml
+++ b/.upgrade.yml
@@ -1,2 +1,2 @@
 mappings:
-  MultiSelectField: Kinglozzer\MultiSelectField\Forms\MultiSelectField
+  MultiSelectField: Arillo\MultiSelectField\MultiSelectField
