--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     },
     "require": {
         "silverstripe/vendor-plugin": "^1.0",
-        "silverstripe/framework": "^4"
+        "silverstripe/framework": "^4",
+        "arillo/silverstripe-cms-alpine": "dev-main"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
