--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "issues": "https://github.com/arillo-ch/silverstripe-multiselectfield/issues"
     },
     "require": {
-        "silverstripe/vendor-plugin": "^1.0",
-        "silverstripe/framework": "^4",
+        "silverstripe/vendor-plugin": "^1.0 | ^2.0",
+        "silverstripe/framework": "^4.0 | ^5.0",
         "arillo/silverstripe-cms-alpine": "dev-main"
     },
     "require-dev": {
