--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "issues": "https://github.com/arillo-ch/silverstripe-multiselectfield/issues"
     },
     "require": {
-        "silverstripe/vendor-plugin": "^2.0 || ^3.0",
-        "silverstripe/framework": "^5.0 || ^6.0",
+        "silverstripe/vendor-plugin": "^3.0",
+        "silverstripe/framework": "^6.0",
         "arillo/silverstripe-cms-alpine": "@dev"
     },
     "require-dev": {
