--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "require": {
         "silverstripe/vendor-plugin": "^3.0",
         "silverstripe/framework": "^6.0",
-        "arillo/silverstripe-cms-alpine": "@dev"
+        "arillo/silverstripe-cms-alpine": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5 || ^11.0"
